--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: jekyll-rtd-theme
-description: Just another documentation theme compatible with GitHub Pages
+title: max-devops
+description: My personal (and professional) GitHub Page.
 
 theme: null
 
